--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,25 @@
-.settings
-.project
-.classpath
-target/
-test-output/
-node_modules/**
-.orig
+
+### Java ###
+# Compiled class file
 *.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+hs_err_pid*
+replay_pid*
